Removed address/date.

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <img src="./Images/circuit.png">
             <div class="after">
                 <h1 align="center"><strong>Hackathon 2020 (Tri-Valley Crypto Hacks)</strong></h1>
-                <h2 align="center"><strong>Februrary 15-16, 2020</strong></h2>
-                <h2 align="center"><strong>5353 Sunol Blvd. Pleasanton, California</strong></h2>
+ <!--               <h2 align="center"><strong>Februrary 15-16, 2020</strong></h2>
+ <h2 align="center"><strong>5353 Sunol Blvd. Pleasanton, California</strong></h2>-->
                 <div align="center">
                     <a href="./listofprojects.html" class="button">Submissions & Winners</a>
                 </div>
