Updated site for virtual hackathon.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tri-Valley Crypto Hacks</title>
+        <title>Tri-Valley Virtual Hacks</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -13,7 +13,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-            <li class="navbar-brand"><a href="./index.html"><img src="./Images/logoss.png" alt="Tri-Valley Crypto Hacks Logo"></a></li>
+            <li class="navbar-brand"><a href="./index.html"><img src="./Images/logoss.png" alt="Tri-Valley Virtual Hacks Logo"></a></li>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsenavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -31,9 +31,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./sponsors.html">Sponsors</a>
                     </li>
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="nav-link" href="./Volunteer.html">Volunteer/Mentor</a>
-                    </li>
+                    </li>-->
                     <li class="nav-item">
                         <a class="nav-link" href="./register.html">Register</a>
                     </li>
@@ -47,45 +47,46 @@
         <div class="image-container show-picture">
             <img src="./Images/circuit.png">
             <div class="after">
-                <h1 align="center"><strong>Hackathon 2020 (Tri-Valley Crypto Hacks)</strong></h1>
- <!--               <h2 align="center"><strong>Februrary 15-16, 2020</strong></h2>
- <h2 align="center"><strong>5353 Sunol Blvd. Pleasanton, California</strong></h2>-->
+                <h1 align="center"><strong>Tri-Valley Virtual Hacks 2020</strong></h1>
+                <h2 align="center"><strong>May 16-17, 2020</strong></h2>
+                <h2 align="center"><strong>Virtual Hackathon - Held Online</strong></h2>
                 <div align="center">
-                    <a href="./listofprojects.html" class="button">Submissions & Winners</a>
+                    <a href="./listofprojects.html" class="button">Last Year's Submissions & Winners</a>
                 </div>
                 <div align="center">
-                    <a href="https://drive.google.com/open?id=1CmtQ29nE5rsgnaAdSEYZcOTVJBTNYfQR" class="button">Photos</a>
+                    <a href="https://drive.google.com/open?id=1CmtQ29nE5rsgnaAdSEYZcOTVJBTNYfQR" class="button">Last Year's Photos</a>
                 </div>
             </div>
         </div>
         <div class="row show-text">
             <div class="col-md-12 show-text">
-                <h1 class = "textcolor" align="center"><strong>Hackathon 2020 (Tri-Valley Crypto Hacks)</strong></h1>
-                <h2 class = "textcolor" align="center"><strong>Februrary 15-16, 2020</strong></h2>
-                <h2 class = "textcolor" align="center"><strong>5353 Sunol Blvd. Pleasanton, California</strong></h2>
+                <h1 class = "textcolor" align="center"><strong>Tri-Valley Virtual Hacks 2020</strong></h1>
+                <h2 class = "textcolor" align="center"><strong>May 16-17, 2020</strong></h2>
+                <h2 class = "textcolor" align="center"><strong>Virtual Hackathon - Held Online</strong></h2>
                 <div align="center">
-                    <a href="./listofprojects.html" class="button">Submissions & Winners</a>
+                    <a href="./listofprojects.html" class="button">Last Year's Submissions & Winners</a>
                 </div>
                 <div align="center">
-                    <a href="https://drive.google.com/open?id=1CmtQ29nE5rsgnaAdSEYZcOTVJBTNYfQR" class="button">Photos</a>
+                    <a href="https://drive.google.com/open?id=1CmtQ29nE5rsgnaAdSEYZcOTVJBTNYfQR" class="button">Last Year's Photos</a>
                 </div>
             </div>
         </div>
+        <!--
         <div class="row">
             <div class="col-md-12">
                 <h5 align="center">Thank you to all the volunteers/Mentors and student officers for making this event come successful.</h5>
                 <h5 align="center">We would like all of you guys to do this quick survey <a href="https://tinyurl.com/cryptohacks2020survey" target="_blank">here</a> so we can improve next year</h5>
                 <h5 align="center">If you are interested in AI-Camp and would also like to help Tri-Valley Crypto Hacks next year please quickly fill out this <a href="https://tinyurl.com/aicamp2020" target="_blank">form</a></h5>
             </div>
-        </div>
+        </div>-->
         
         <div id="about">
             <div class = "row">
                 <div class = "col-md-8">
                     <h2 align= "center"><strong>About</strong></h2>
-                    <p> <strong>Tri-Valley Crypto Hacks is the first 24 hour hackathon in the Dublin-Pleasanton-Livermore area for high schoolers.
-                    With the help of Girls Who Code and Foothill High School's Cybersecurity club, Tri-Valley Crypto Hacks hopes to empower the next
-                    generation of bay area youth into learning how the world around them works through the collaborative opportunities that present themselves at its hackathons.
+                    <p> <strong>Tri-Valley Virtual Hacks (formerly Tri-Valley Crypto Hacks) is the first 24 hour hackathon in the Dublin-Pleasanton-Livermore area for high schoolers.
+                    With the help of Girls Who Code and Foothill High School's Cybersecurity club, Tri-Valley Virtual Hacks hopes to empower the next
+                    generation of bay area youth into learning how the world around them works through the collaborative opportunities that present themselves at its hackathons. In light of the current lockdown order and pandemic, Tri-Valley Virtual Hacks will be holding an online hackathon on May 16 and 17th, 2020. When the lockdown ends, we will also hold a physical hackathon.
                         </strong></p>
                 </div>
                 <div class = "col-md-4">
@@ -97,7 +98,7 @@
             <div class = "row">
                 <div class = "col-md-12">
                     <h2 align = "center"><strong>FAQ</strong></h2>
-                    <details class="questions">
+                    <!--<details class="questions">
                         <summary><strong>What do you bring?</strong></summary>
                         <p><strong>You need to bring your laptop, as we are not providing laptops. We suggest 
                         you bring your chargers (for your phone and laptop), sleeping bag/pillow, 
@@ -108,23 +109,21 @@
                         <summary><strong>Is there a fee and what for?</strong></summary>
                         <p> <strong>There is no fee to join this hackathon. We will provide the food and swag throughout the event. 
                             </strong></p> 
-                    </details>
+                    </details>-->
                     <details class="questions">
                         <summary><strong>Who can come?</strong></summary>
                         <p> <strong>This hackathon is open to all high schoolers especially from the Tri-Valley Area.
                             </strong></p> 
                     </details>
-                    <details class="questions">
+                    <!--<details class="questions">
                         <summary><strong>Will we have food, and if so what are the plans?</strong></summary>
                         <p> <strong>We are planning a lunch after arrival, an afternoon snack, dinner, 
                         a midnight snack and a breakfast. We will also have extra snacks throughout the event.
                             </strong></p> 
-                    </details>
+                    </details>-->
                     <details class="questions">
                         <summary><strong>Will there be any other activities, workshops, or games?</strong></summary>
-                        <p> <strong>There will be an intro to HTML/CSS workshop designed for beginner audiences. In the workshop, you will 
-                        get a brief overview of web design and will design your first basic website. We are planning to have a tournament that is a surprise! 
-                        We will let you know at the time of the game what we are playing for a competition. Yes, you will get a prize if you win.
+                        <p> <strong>There will be optional Zoom workshops on programming-related topics. We will announce the topics closer to the date of the hackathon.
                             </strong></p> 
                     </details>
                     <details class="questions">
@@ -134,12 +133,12 @@
                         </details>
                     <details class="questions">
                         <summary><strong>Why should you come?</strong></summary>
-                        <p> <strong>Free food, free stuff, cool workshops, games, and prizes
+                        <p> <strong>It's quarantine! What else is there to do? Build something that makes the world a better place and tell your friends about it, all without leaving your couch.
                             </strong></p>
                     </details>
                     <details class="questions">
                         <summary><strong>What can I win?</strong></summary>
-                        <p> <strong>Cloudsploit credit and amazon gift cards. Prizes may change as the date gets closer
+                        <p> <strong>Cloudsploit credit and amazon gift cards. Prizes may change as the date gets closer.
                             </strong></p>
                     </details>
                 </div>
@@ -149,26 +148,13 @@
             <h2 align = "center"><strong>Schedule</strong></h2>
             <div class="row">
                 <div class="col-md-6">
-                    <h4 align="center">Saturday, Feburary 15th</h4>
-                    <p align = "center">12:00 P.M.   <strong>Check-in Time</strong></p>
-                    <p align = "center">12:30 P.M.   <strong>Opening Ceremony</strong></p>
-                    <p align = "center">1:15 P.M.   <strong>Lunch</strong></p>
-                    <p align = "center">2:00 P.M.   <strong>HTML/CSS Workshop</strong></p>
-                    <p align = "center">4:00 P.M.   <strong>App Development Workshop</strong></p>
-                    <p align = "center">5:00 P.M.   <strong>Snack</strong></p>
-                    <p align = "center">6:00 P.M.   <strong>Python For AI Workshop (Presented by <a class="yourlink" href="https://tinyurl.com/uqkd67g">ai-Camp.org</a>)</strong></p>
-                    <p align = "center">7:30 P.M.   <strong>Dinner</strong></p>
-                    <p align = "center">8:30 P.M.   <strong>Work Time</strong></p>
-                    <p align = "center">Schedule may change as we get closer to the date</p>
-                </div>
-                <div class="col-md-6">
-                    <h4 align = "center">Sunday, Feburary 16th</h4>
-                    <p align = "center">12:00 A.M.   <strong>Midnight Snack</strong></p>
-                    <p align = "center">7:00 A.M.   <strong>Breakfast</strong></p>
-                    <p align = "center">8:00 A.M.   <strong>Presentation Sign Ups</strong></p>
-                    <p align = "center">9:00 A.M.   <strong>Presentations</strong></p>
-                    <p align = "center">11:00 A.M.   <strong>Judging</strong></p>
-                    <p align = "center">11:30 A.M.   <strong>Closing Ceremony</strong></p>
+                    <p align = "center">12:00 PM to 12:30 PM on May 16th    <strong>Opening Remarks - Go Over Rules and Schedule</strong></p>
+                    <p align = "center">1:00 PM to 2:00 PM on May 16th    <strong>Guest Speaker</strong></p>
+                    <p align = "center">3:00 PM to 4:30 PM on May 16th    <strong>Python with AI Workshop via YouTube Live</strong></p>
+                    <p align = "center">4:30 PM on May 16th to 7:59 AM on May 17th    <strong>Development Time - Programmers and organizers available via Zoom to help at any time!</strong></p>
+                    <p align = "center">8:00 AM on May 17th    <strong>Submit final projects.</strong></p>
+                    <p align = "center">9:00 AM to 11:00 PM on May 17th    <strong>Pitches and Judging</strong></p>
+                    <p align = "center">11:00 PM to 12:00 AM on May 17th    <strong>Awards and Closing Ceremony</strong></p>
                     <p align = "center">Schedule may change as we get closer to the date</p>
                 </div>
             </div>
@@ -181,8 +167,8 @@
                 </div>
             </div>
         </div>-->
-        <footer>
-            <div class = "row" style="background-color: #00f2bb">
+        <!--<footer>-->
+            <div class="row" style="background-color: #00f2bb">
                 <div class= "col-md-3">
                     <img src= "./Images/logo-betters.png">
                 </div>
@@ -197,7 +183,6 @@
                     <p align = "center"><a href="./index.html#faq">FAQ</a></p>
                     <p align = "center"><a href="./index.html#Schedule">Schedule</a></p>
                     <p align = "center"><a href="./sponsors.html">Sponsors</a></p>
-                    <p align = "center"><a href="./Volunteer.html">Volunteer/Mentor</a></p>
                     <p align = "center"><a href="./register.html">Register</a></p>
                     <p align = "center"><a href="./listofprojects.html">Submissions & Winners</a></p>
                 </div>
@@ -210,7 +195,7 @@
                     <p align = "center"><a href="mailto:sponsors@cryptohacks.tech" target="_blank">Email Us</a></p>
                 </div>
             </div>
-        </footer>
+        <!--</footer>-->
         <script src="./Scripts/index.js"></script>
     </body>
 </html>
