--- a/sponsors.html
+++ b/sponsors.html
@@ -32,9 +32,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="./sponsors.html">Sponsors</a>
                             </li>
-                            <li class="nav-item">
+                            <!--<li class="nav-item">
                                 <a class="nav-link" href="./Volunteer.html">Volunteer/Mentor</a>
-                            </li>
+                            </li>-->
                             <li class="nav-item">
                                 <a class="nav-link" href="./register.html">Register</a>
                             </li>
@@ -47,8 +47,8 @@
         <h1 class="gap"></h1>
         <div class= "row">
             <div class="col-md-12">
-                <h5 align = "center"><strong> If You Would Like To Be A Sponsor Or Help With Our Hackathon Please Email Us At <a href="mailto:sponsors@cryptohacks.tech">sponsors@cryptohacks.tech</a>& check our our sponsorship packet 
-                    <a href="./Docs/Sponsorship packet.pdf">Here</a></strong> </h5>
+                <h5 align = "center"><strong>If you would like to be a sponsor or help with our hackathon, please email us at <a href="mailto:sponsors@cryptohacks.tech">sponsors@cryptohacks.tech</a> and check our our sponsorship packet 
+                    <a style="color: red; text-decoration: underline;" href="./Docs/Sponsorship packet.pdf">here.</a></strong> </h5>
                 <h1 align = "center"><strong>Partners</strong></h1>
             </div>
         </div>
