--- a/listofprojects.html
+++ b/listofprojects.html
@@ -32,9 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./sponsors.html">Sponsors</a>
                         </li>
-                        <li class="nav-item">
+                        <!--<li class="nav-item">
                             <a class="nav-link" href="./Volunteer.html">Volunteer/Mentor</a>
-                        </li>
+                        </li>-->
                         <li class="nav-item">
                             <a class="nav-link" href="./register.html">Register</a>
                         </li>
@@ -47,8 +47,8 @@
         <h1 class="gap"></h1>
         <div class="row">
             <div class="col-md-12">
-                <h1 align = "center"><strong>Projects</strong></h1>
-                <h4 align="center"><strong>Below is a list of all submissions and winners</strong></h4>
+                <h1 align = "center"><strong>Last Year's Projects</strong></h1>
+                <h4 align="center"><strong>Below is a list of all submissions and winners from the previous Tri-Valley Crypto Hacks event. Feel free to look through them for inspiration!</strong></h4>
             </div>
         </div>
         <div class="row part">
