--- a/register.html
+++ b/register.html
@@ -47,7 +47,7 @@
         <h1 class="gap"></h1>
         <div class="row">
             <div class="col-md-12 centerimage">
-                <iframe src="./testregister.html" width="100%" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <!--<iframe src="./testregister.html" width="100%" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>-->
             </div>
         </div>
         <footer>
