--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img src="./Images/circuit.png">
             <div class="after">
                 <h1 align="center"><strong>Tri-Valley Virtual Hacks 2020</strong></h1>
-                <h2 align="center"><strong>May 16-17, 2020</strong></h2>
+                <h2 align="center"><strong>May 23-24, 2020</strong></h2>
                 <h2 align="center"><strong>Virtual Hackathon - Held Online</strong></h2>
                 <div align="center">
                     <a href="./listofprojects.html" class="button">Last Year's Submissions & Winners</a>
@@ -61,7 +61,7 @@
         <div class="row show-text">
             <div class="col-md-12 show-text">
                 <h1 class = "textcolor" align="center"><strong>Tri-Valley Virtual Hacks 2020</strong></h1>
-                <h2 class = "textcolor" align="center"><strong>May 16-17, 2020</strong></h2>
+                <h2 class = "textcolor" align="center"><strong>May 23-24, 2020</strong></h2>
                 <h2 class = "textcolor" align="center"><strong>Virtual Hackathon - Held Online</strong></h2>
                 <div align="center">
                     <a href="./listofprojects.html" class="button">Last Year's Submissions & Winners</a>
@@ -86,7 +86,7 @@
                     <h2 align= "center"><strong>About</strong></h2>
                     <p> <strong>Tri-Valley Virtual Hacks (formerly Tri-Valley Crypto Hacks) is the first 24 hour hackathon in the Dublin-Pleasanton-Livermore area for high schoolers.
                     With the help of Girls Who Code and Foothill High School's Cybersecurity club, Tri-Valley Virtual Hacks hopes to empower the next
-                    generation of bay area youth into learning how the world around them works through the collaborative opportunities that present themselves at its hackathons. In light of the current lockdown order and pandemic, Tri-Valley Virtual Hacks will be holding an online hackathon on May 16 and 17th, 2020. When the lockdown ends, we will also hold a physical hackathon.
+                    generation of bay area youth into learning how the world around them works through the collaborative opportunities that present themselves at its hackathons. In light of the current lockdown order and pandemic, Tri-Valley Virtual Hacks will be holding an online hackathon on May 23-24, 2020. When the lockdown ends, we will also hold a physical hackathon.
                         </strong></p>
                 </div>
                 <div class = "col-md-4">
@@ -148,13 +148,13 @@
             <h2 align = "center"><strong>Schedule</strong></h2>
             <div class="row">
                 <div class="col-md-6">
-                    <p align = "center">12:00 PM to 12:30 PM on May 16th    <strong>Opening Remarks - Go Over Rules and Schedule</strong></p>
-                    <p align = "center">1:00 PM to 2:00 PM on May 16th    <strong>Guest Speaker</strong></p>
-                    <p align = "center">3:00 PM to 4:30 PM on May 16th    <strong>Python with AI Workshop via YouTube Live</strong></p>
-                    <p align = "center">4:30 PM on May 16th to 7:59 AM on May 17th    <strong>Development Time - Programmers and organizers available via Zoom to help at any time!</strong></p>
-                    <p align = "center">8:00 AM on May 17th    <strong>Submit final projects.</strong></p>
-                    <p align = "center">9:00 AM to 11:00 PM on May 17th    <strong>Pitches and Judging</strong></p>
-                    <p align = "center">11:00 PM to 12:00 AM on May 17th    <strong>Awards and Closing Ceremony</strong></p>
+                    <p align = "center">12:00 PM to 12:30 PM on May 23rd    <strong>Opening Remarks - Go Over Rules and Schedule</strong></p>
+                    <p align = "center">1:00 PM to 2:00 PM on May 23rd    <strong>Guest Speaker</strong></p>
+                    <p align = "center">3:00 PM to 4:30 PM on May 23rd    <strong>Python with AI Workshop via YouTube Live</strong></p>
+                    <p align = "center">4:30 PM on May 23rd to 7:59 AM on May 24th    <strong>Development Time - Programmers and organizers available via Zoom to help at any time!</strong></p>
+                    <p align = "center">8:00 AM on May 24th    <strong>Submit final projects.</strong></p>
+                    <p align = "center">9:00 AM to 11:00 PM on May 24th    <strong>Pitches and Judging</strong></p>
+                    <p align = "center">11:00 PM to 12:00 AM on May 24th    <strong>Awards and Closing Ceremony</strong></p>
                     <p align = "center">Schedule may change as we get closer to the date</p>
                 </div>
             </div>
