Updated sponsors and schedule.

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
             <div class="row">
                 <div class="col-md-6">
                     <p align = "center">12:00 PM to 12:30 PM on May 23rd    <strong>Opening Remarks - Go Over Rules and Schedule</strong></p>
-                    <p align = "center">1:00 PM to 2:00 PM on May 23rd    <strong>Guest Speaker</strong></p>
                     <p align = "center">3:00 PM to 4:30 PM on May 23rd    <strong>Python with AI Workshop via YouTube Live</strong></p>
                     <p align = "center">4:30 PM on May 23rd to 7:59 AM on May 24th    <strong>Development Time - Programmers and organizers available via Zoom to help at any time!</strong></p>
+                    <p align = "center">4:30 PM on May 23rd     <strong>"How to land a tech internship in high school" lecture via YouTube Live</strong></p>
                     <p align = "center">8:00 AM on May 24th    <strong>Submit final projects.</strong></p>
                     <p align = "center">9:00 AM to 11:00 PM on May 24th    <strong>Pitches and Judging</strong></p>
                     <p align = "center">11:00 PM to 12:00 AM on May 24th    <strong>Awards and Closing Ceremony</strong></p>
