--- a/register.html
+++ b/register.html
@@ -42,10 +42,10 @@
             </div>
         </nav>
         <h1 class="gap"></h1>
-        <div class="row">
-            <div class="col-md-12 centerimage">
-                <!--<iframe src="./testregister.html" width="100%" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>-->
-            </div>
+        <div>
+            <p style="text-align: center; font-size: 35px;">
+                Register at <a href="https://tinyurl.com/virtualhacks2020">https://tinyurl.com/virtualhacks2020</a>.
+            </p>
         </div>
         <footer>
             <div class = "row" style="background-color: #00f2bb">
