--- a/sponsors.html
+++ b/sponsors.html
@@ -60,13 +60,6 @@
                     </a>
                 </div> 
             </div>
-            <div class="col-md-6 sponsors">
-                <div class="image" align="center">
-                    <a href="https://www.cityofpleasantonca.gov/" target="_blank">
-                        <img src="./Images/Partners/city of pleasanton.jpg" alt="City Of Pleasanton" style="width: 80%;">
-                    </a>
-                </div>
-            </div>
         </div>
         <div class="row">
             <div class="col-md-12">
@@ -76,52 +69,8 @@
         <div class="row part">
             <div class="col-md-3 sponsors">
                 <div class="image" align="center">
-                    <a href="https://www.ngn.org" target="_blank">
-                        <img src="./Images/Sponsors/ngn_logo.png" alt="NGN Logo" style="width: 55%;">
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-3 sponsors">
-                <div class="image" align="center">
-                    <a href="https://tinyurl.com/uqkd67g" target="_blank">
-                        <img src="./Images/Sponsors/ai-camp.png" alt="Ai-Camp Logo" style="width: 55%;">
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-3 sponsors">
-                <div class="image" align="center">
                     <a href="https://github.com" target="_blank">
                         <img src="./Images/Sponsors/Github.png" alt="Github Logo" style="width: 55%;">
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-3 sponsors">
-                <div class="image" align="center">
-                    <a href="https://hackerearth.com/" target="_blank">
-                        <img src="./Images/Sponsors/hackerearth.jpg" alt="Hackerearth logo" style="width: 55%;">
-                    </a>
-                </div>  
-            </div>
-        </div>
-        <div class="row part">
-            <div class="col-md-3 sponsors">
-                <div class="image" align="center">
-                    <a href="https://www.stickermule.com" target="_blank">
-                        <img src="./Images/Sponsors/Stickermule.png" alt="Stickermule Logo" style="width: 55%;">
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-3 sponsors">
-                <div class="image" align="center">
-                    <a href="https://magoosh.com/" target="_blank">
-                        <img src="./Images/Sponsors/magoosh.jpg" alt="Magoosh Logo" style="width: 55%;">
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-3 sponsors">
-                <div class="image" align="center">
-                    <a href="https://www.sashido.io/" target="_blank">
-                        <img src="./Images/Sponsors/sashido.png" alt="Sashido Logo" style="width: 55%;">
                     </a>
                 </div>
             </div>
@@ -132,22 +81,6 @@
                     </a>
                 </div>  
             </div>
-        </div>
-        <div class="row part">
-            <div class="col-md-3 sponsors">
-                <div class="image" align="center">
-                    <a href="https://www.makeymakey.com" target="_blank">
-                        <img src="./Images/Sponsors/makeylogo.png" alt="Makey Makey Logo" style="width: 55%;">
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-3 sponsors">
-                <div class="image" align="center">
-                    <a href="https://shawee.io" target="_blank">
-                        <img src="./Images/Sponsors/Shawee.jfif" alt="Shawee Logo" style="width: 55%;">
-                    </a>
-                </div>
-            </div>
             <div class="col-md-3 sponsors">
                 <div class="image" align="center">
                     <a href="https://www.leangap.org" target="_blank">
@@ -157,24 +90,15 @@
             </div>
             <div class="col-md-3 sponsors">
                 <div class="image" align="center">
-                    <a href="https://www.freshprints.com/" target="_blank">
-                        <img src="./Images/Sponsors/freshprints.webp" alt="Freshprints Logo" style="width: 55%;">
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="row part">
-            <div class="col-md-3 sponsors">
-                <div class="image" align="center">
-                    <a href="https://www.desmos.com" target="_blank">
-                        <img src="./Images/Sponsors/desmos.jpg" alt="Desmos Logo" style="width: 55%;">
+                    <a href="https://www.golaunchtech.com" target="_blank">
+                        <img src="./Images/Sponsors/launchtech.png" alt="Launchtech Logo" style="width: 55%;">
                     </a>
                 </div>
             </div>
             <div class="col-md-3 sponsors">
                 <div class="image" align="center">
-                    <a href="https://www.sketch.com/" target="_blank">
-                        <img src="./Images/Sponsors/sketch.png" alt="Sketch Logo" style="width: 55%;">
+                    <a href="https://www.ai-camp.org" target="_blank">
+                        <img src="./Images/Sponsors/ai-camp.png" alt="Ai-Camp Logo" style="width: 55%;">
                     </a>
                 </div>
             </div>
