Changed registration link.

--- a/register.html
+++ b/register.html
@@ -43,8 +43,8 @@
         </nav>
         <h1 class="gap"></h1>
         <div>
-            <p style="text-align: center; font-size: 35px;">
-                Register at <a href="https://tinyurl.com/virtualhacks2020">https://tinyurl.com/virtualhacks2020</a>.
+            <p style="text-align: center; font-size: 35px; text-decoration: underline;">
+	    <a href="https://www.eventbrite.com/e/tri-valley-virtual-hacks-2020-tickets-104381419636">Click here to register on Eventbrite.</a>
             </p>
         </div>
         <footer>
