Added cancellation notice to homepage. :(

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <img src="./Images/circuit.png">
             <div class="after">
                 <h1 align="center"><strong>Tri-Valley Virtual Hacks 2020</strong></h1>
-                <h2 align="center"><strong>May 23-24, 2020</strong></h2>
-                <h2 align="center"><strong>Virtual Hackathon - Held Online</strong></h2>
+                <h2 align="center"><strong>CANCELED</strong></h2>
+                <h2 align="center"><strong>Virtual Hackathon - CANCELED</strong></h2>
                 <div align="center">
                     <a href="./listofprojects.html" class="button">Last Year's Submissions & Winners</a>
                 </div>
@@ -83,11 +83,13 @@
         <div id="about">
             <div class = "row">
                 <div class = "col-md-8">
-                    <h2 align= "center"><strong>About</strong></h2>
-                    <p> <strong>Tri-Valley Virtual Hacks (formerly Tri-Valley Crypto Hacks) is the first 24 hour hackathon in the Dublin-Pleasanton-Livermore area for high schoolers.
-                    With the help of Girls Who Code and Foothill High School's Cybersecurity club, Tri-Valley Virtual Hacks hopes to empower the next
-                    generation of bay area youth into learning how the world around them works through the collaborative opportunities that present themselves at its hackathons. In light of the current lockdown order and pandemic, Tri-Valley Virtual Hacks will be holding an online hackathon on May 23-24, 2020. When the lockdown ends, we will also hold a physical hackathon.
-                        </strong></p>
+                    <h2 align= "center"><strong>CANCELED</strong></h2>
+                    <p>Hi everyone,
+                    <br>Due to financial difficulties due to the COVID-19 pandemic, one of our largest sponsors had to pull out of Tri Valley Virtual Hacks 2020. Unfortunately, we do not have time to secure another sponsorship. With heavy hearts, we have chosen to cancel the hackathon. We are deeply sorry for the last minute notice. 
+                    <br>We would like to thank you for supporting us in our event. We hope that you will be available for any future hackathons. 
+                    <br>Full refunds will be issued via Eventbrite. 
+                    <br>Sincerely,
+                    <br>Tri Valley Crypto Team</p>
                 </div>
                 <div class = "col-md-4">
                     <img class = "people" src = "./Images/hackathonpeople.jpg">
