No longer cancel tag on main page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tri-Valley Virtual Hacks</title>
+        <title>Tri-Valley Crypto Hacks</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -47,15 +47,15 @@
         <div class="image-container show-picture">
             <img src="./Images/circuit.png">
             <div class="after">
-                <h1 align="center"><strong>Tri-Valley Virtual Hacks 2020</strong></h1>
-                <h2 align="center"><strong>CANCELED</strong></h2>
-                <h2 align="center"><strong>Virtual Hackathon - CANCELED</strong></h2>
-                <div align="center">
+                <h1 align="center"><strong>Tri-Valley Crypto Hacks 2021</strong></h1>
+                <!--<h2 align="center"><strong>CANCELED</strong></h2>-->
+                <!---<h2 align="center"><strong>Virtual Hackathon - CANCELED</strong></h2>-->
+                <!--<div align="center">
                     <a href="./listofprojects.html" class="button">Last Year's Submissions & Winners</a>
                 </div>
                 <div align="center">
                     <a href="https://drive.google.com/open?id=1CmtQ29nE5rsgnaAdSEYZcOTVJBTNYfQR" class="button">Last Year's Photos</a>
-                </div>
+                </div>-->
             </div>
         </div>
         <div class="row show-text">
@@ -177,6 +177,7 @@
                 <div class= "col-md-3">
                     <h4 align = "center"><strong>Past Events</strong></h4>
                     <p align = "center"><a href="https://trivalleyhacks.github.io/hackathonwebsite2019/">2019</a></p>
+                    <p align = "center"><a href="https://trivalleyhacks.github.io/HackathonWebsite2020/">2020</a></p>
                 </div>
                 <div class= "col-md-3">
                     <h4 align = "center"><strong>Navigation</strong></h4>
