cancel update link

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <img src="./Images/circuit.png">
             <div class="after">
                 <h1 align="center"><strong>Tri-Valley Crypto Hacks 2021</strong></h1>
-                <!--<h2 align="center"><strong>CANCELED</strong></h2>-->
-                <!---<h2 align="center"><strong>Virtual Hackathon - CANCELED</strong></h2>-->
-                <!--<div align="center">
+                <!--<h2 align="center"><strong>CANCELED</strong></h2>
+                <h2 align="center"><strong>Virtual Hackathon - CANCELED</strong></h2>
+                <div align="center">
                     <a href="./listofprojects.html" class="button">Last Year's Submissions & Winners</a>
                 </div>
                 <div align="center">
@@ -169,7 +169,7 @@
                 </div>
             </div>
         </div>-->
-        <!--<footer>-->
+        <footer>
             <div class="row" style="background-color: #00f2bb">
                 <div class= "col-md-3">
                     <img src= "./Images/logo-betters.png">
@@ -198,7 +198,7 @@
                     <p align = "center"><a href="mailto:sponsors@cryptohacks.tech" target="_blank">Email Us</a></p>
                 </div>
             </div>
-        <!--</footer>-->
+        </footer>
         <script src="./Scripts/index.js"></script>
     </body>
 </html>
